# Skillbox_CPP

./: .gitignore  CMakeLists.txt  Makefile  launch.bat  main.cpp  main.hpp  readme.md
Module_02/: Module_02.cpp  Module_02.hpp  Task_1.cpp  Task_2.cpp  Task_3.cpp  Task_4.cpp
Module_03/: Module_03.cpp  Module_03.hpp  Task_1.cpp  Task_2.cpp  Task_3.cpp  Task_4.cpp
Module_04/: Module_04.cpp  Module_04.hpp  Task_1.cpp  Task_2.cpp  Task_3.cpp  Task_4.cpp  Task_5.cpp  Task_6.cpp  Task_7.cpp  Task_8.cpp  Task_9.cpp
Module_05/: Module_05.cpp  Module_05.hpp  Task_1.cpp  Task_2.cpp  Task_3.cpp  Task_4.cpp  Task_5.cpp  Task_6.cpp  Task_7.cpp  Task_8.cpp  Task_9.cpp
Module_06/: Module_06.cpp  Module_06.hpp  Task_1.cpp  Task_2.cpp  Task_3.cpp  Task_4.cpp  Task_5.cpp  Task_6.cpp  Task_7.cpp  Task_8.cpp
Module_07/: Module_07.cpp  Module_07.hpp  Task_1.cpp  Task_2.cpp  Task_3.cpp  Task_4.cpp  Task_5.cpp  Task_6.cpp  Task_7.cpp  Task_8.cpp
Module_08/: Module_08.cpp  Module_08.hpp  Task_1.cpp  Task_10.cpp  Task_2.cpp  Task_3.cpp  Task_4.cpp  Task_5.cpp  Task_6.cpp  Task_7.cpp  Task_8.cpp  Task_9.cpp
Module_09/: Module_09.cpp  Module_09.hpp  Task_1.cpp  Task_2.cpp  Task_3.cpp  Task_4.cpp  Task_5.cpp
Module_10/: Module_10.cpp  Module_10.hpp  Task_1.cpp
Module_11/: Module_11.cpp  Module_11.hpp  Task_1.cpp  Task_2.cpp  Task_3.cpp  Task_4.cpp
Module_12/: Module_12.cpp  Module_12.hpp  Task_1.cpp  Task_2.cpp  Task_3.cpp  Task_4.cpp
Module_13/: Module_13.cpp  Module_13.hpp  Task_1.cpp  Task_2.cpp  Task_3.cpp
Module_14/: Module_14.cpp  Module_14.hpp  Task_1.cpp  Task_2.cpp  Task_3.cpp  Task_4.cpp  Task_5.cpp  Task_6.cpp  Task_7.cpp  Task_8.cpp
Module_15/: Module_15.cpp  Module_15.hpp  Task_1.cpp  Task_2.cpp  Task_3.cpp  Task_4.cpp
Module_16/: Module_16.cpp  Module_16.hpp  Task_1.cpp  Task_2.cpp  Task_3.cpp  Task_4.cpp  Task_5.cpp
Module_17/: Module_17.cpp  Module_17.hpp  Task_1.cpp  Task_2.cpp  Task_3.cpp  Tasl_3.cpp
Module_18/: Module_18.cpp  Module_18.hpp  Task_1.cpp  Task_2.cpp  Task_3.cpp
Module_19/: Module_19.cpp  Module_19.hpp  Task_1.cpp  Task_2.cpp  Task_3.cpp  Task_4.cpp  Task_5.cpp
Module_19/docs/: www.txt
Module_20/: Module_20.cpp  Module_20.hpp  Task_1.cpp  Task_2.cpp  Task_3.cpp  Task_4.cpp
Module_21/: Module_21.cpp  Module_21.hpp  Task_1.cpp  Task_2.cpp  Task_3.cpp  Task_4.cpp
Module_21/docs/: sheet.txt
Module_22/: Module_22.cpp  Module_22.hpp  Task_1.cpp  Task_2.cpp  Task_3.cpp
Module_23/: Module_23.cpp  Module_23.hpp  Task_1.cpp  Task_2.cpp  Task_3.cpp
Module_24/: Module_24.cpp  Module_24.hpp  Task_1.cpp  Task_2.cpp  Task_3.cpp
Module_25/: Module_25.cpp  Module_25.hpp
Module_25/Task_1/: Task_1.cpp  Task_1.hpp  Task_1_coord.hpp
Module_25/Task_2/: Task_2.cpp
Module_26/: Module_26.cpp  Module_26.hpp
Module_26/Task_1/: MusicPlayer.cpp  MusicPlayer.hpp  Task_1.cpp  Track.cpp  Track.hpp
Module_26/Task_2/: Phone.cpp  Phone.hpp  Phone_Book.cpp  Phone_Book.hpp  Phone_Number.cpp  Phone_Number.hpp  Task_2.cpp
Module_26/Task_3/: Monitor.cpp  Monitor.hpp  Task_3.cpp  Window.cpp  Window.hpp
Module_27/: Module_27.cpp  Module_27.hpp
Module_27/Task_1/: Branch.cpp  Branch.hpp  Forest.cpp  Forest.hpp  Task_1.cpp
Module_27/Task_2/: Figures.cpp  Figures.hpp  Task_2.cpp
Module_27/Task_3/: Common.hpp  Director.cpp  Director.hpp  Manager.cpp  Manager.hpp  (+3 more)
Module_28/: Module_28.cpp  Module_28.hpp  Task_1.cpp  Task_2.cpp  Task_3.cpp
Module_29/: Module_29.cpp  Module_29.hpp  Task_1.cpp  Task_2.cpp
Module_30/: Module_30.cpp  Module_30.hpp  Task_1.cpp  Task_2.cpp  Task_3.cpp
Module_31/: Module_31.cpp  Module_31.hpp  Task_1.cpp  Task_2.cpp  Task_3.cpp
Module_32/: Module_32.cpp  Module_32.hpp  Task_1.cpp  Task_2.cpp  Task_2.hpp  Task_3.cpp  task3 copy.proto  task3.pb.cc  task3.pb.h
Module_33/: Module_33.cpp  Module_33.hpp  Module_33_Exceptions.hpp  Task_1.cpp  Task_2.cpp  Task_3.cpp  Task_4.cpp
Module_35/: Module_35.cpp  Module_35.hpp  Task_1.cpp  Task_2.cpp  Task_3.cpp
Module_36/: Module_36.cpp  Module_36.hpp  Task_36_1.cpp
Module_36_CW/: Module_36_CW.cpp  Module_36_CW.hpp  Task_36_1_CW.cpp  Task_36_2_CW.cpp  Task_36_3_CW.cpp  Task_36_4_CW.cpp
Module_37/: Module_37.cpp  Module_37.hpp  Task_37_1.cpp  Task_37_2.cpp  Task_37_3.cpp  calculator.ui  calculatorMainWindow.cpp  calculatorMainWindow.hpp  pult.ui  pultMainWindow.cpp  pultMainWindow.hpp
Module_37_CW/: Module_37_CW.cpp  Module_37_CW.hpp  Task_37_1_CW.cpp  caller.ui  callerMainWindow.hpp
Module_38/: main.cpp
(+30 files in other folders)
